# ohm-talk

client/: .projectile  build.nix  default.nix  revealjs-client.cabal  shell.nix
client/src/: Client.hs  Deck.hs  Main.hs  Presenter.hs  Slide.hs
client/static/: exe  index.html  mdtest.md  outline.org  pexe  presenter.html
client/static/js/: reveal.js
client/static/md/: MVC.md  angular.md  fynder.md  ohm-vdom.md  ohm.md  om.md  oo-frameworks.md
revealjs/: LICENSE  revealjs.cabal
server/: MainSnap.hs  Presentation.hs  RevealJS.hs  default.nix  ghcjs-default.nix  revealjs-server.cabal  server-default.nix  shell.nix
server/src/: MainSnap.hs  Present.hs
server/src/Present/: Layout.hs  Model.hs  Stack.hs  State.hs  Types.hs
