name: revealjs-server
version: 1.0.0.3
homepage: http://github.com/boothead/ohm-talk
license: BSD2
license-file: LICENSE
author: Ben Ford
maintainer: ben@perurbis.com
category: Web
build-type: Simple
cabal-version: >=1.20

-- Data-Dir: resources
-- Data-files:
--   index.html
--   main.js
--   style.css

Library
  exposed-modules:  Present
                  , Present.Stack
                  , Present.Layout
  hs-source-dirs: src
  build-depends:
    aeson,
    base,
    containers,
--    lens,
    text
  if impl(ghcjs)
    build-depends:
      ghcjs-base
  ghc-options: -Wall -O2 -threaded
  default-language: Haskell2010

Executable revealjs-server
  default-language: Haskell2010
  if impl(ghcjs)
    buildable: False
  if !impl(ghcjs)
    build-depends:
      aeson,
      base,
      containers,
      revealjs-server,
      engine-io,
      engine-io-snap,
      snap-core,
      snap-cors,
      snap-server,
      socket-io,
      stm,
      text,
      mtl,
      transformers
  hs-source-dirs:   src
  main-is:          MainSnap.hs
  other-modules:    Paths_revealjs_server
                  , Present
                  , Present.State
  ghc-options: -Wall -O2 -threaded
  default-language: Haskell2010
